theme: Fix up dark mode on adsb, sort icons on main, font usage consistency

--- a/http_data/css/layout-default-1.4.0.css
+++ b/http_data/css/layout-default-1.4.0.css
@@ -19,7 +19,7 @@
  *	Just to make demo-pages look better - not actually relevant to Layout!
  */
 body {
-	font-family: Geneva, Arial, Helvetica, sans-serif;
+	xfont-family: Geneva, Arial, Helvetica, sans-serif;
 	font-size:   100%;
 	*font-size:  80%;
 }
